// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuBar > renders 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Contact
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <button
        class="btn btn-tertiary menu-upgrade"
        type="button"
      >
        <img
          alt="Streetmix+"
          class="menu-avatar-subscriber"
          src="test-file-stub"
        />
        Get Streetmix+‎
      </button>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
          <svg
            class="menu-external-link"
            data-icon="external-link"
            data-icon-source="test"
          />
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            data-icon-source="test"
            focusable="false"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="btn btn-primary menu-sign-in"
          type="button"
        >
          Sign in
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar > renders logged in user 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Contact
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <button
        class="btn btn-tertiary menu-upgrade"
        type="button"
      >
        <img
          alt="Streetmix+"
          class="menu-avatar-subscriber"
          src="test-file-stub"
        />
        Get Streetmix+‎
      </button>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
          <svg
            class="menu-external-link"
            data-icon="external-link"
            data-icon-source="test"
          />
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            data-icon-source="test"
            focusable="false"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached menu-avatar"
        >
          <span
            class="avatar"
          >
            <img
              alt="foo"
            />
          </span>
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar > renders minimal menu in offline mode 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
          <svg
            class="menu-external-link"
            data-icon="external-link"
            data-icon-source="test"
          />
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            data-icon-source="test"
            focusable="false"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            data-icon-source="test"
          />
        </button>
      </li>
    </ul>
    <div
      class="instance-badge instance-label-demo"
    >
      Demo
    </div>
  </nav>
</DocumentFragment>
`;
